# langgraph-agent-repo

./: .env.example  .gitignore  .gitleaks.toml  hello.py  langgraph-agent-repo.code-workspace  makefile  project.bundle  pyproject.toml  tasks.md
.cursor/rules/: python-code-quality.mdc
bundle/: project.bundle
docs/: 0_exploration.md  1_Context_Engineering.md  3_supervisor_prompting_best_practices.md  5_Langgraph Cheatsheet.md  5_Langsmith_cheatsheet.md  Agentic_Best_Practices.md  Deep Research Pattern (from Anthropic).md  Langgraph Cheatsheet.md  Z_agenda.md  agenda.md  shotcuts.jsonc  wofklow_development.excalidraw
docs/agent_engine:streaming/: Stream Processor Architecture.md
docs/agents/: AgentCard _Inspector.md  Agent_Card_Navigator.md  Agent_Card_Orchestrator.md  agents.md  clarification_agent.md
docs/conflu/: agentic_sprint_planing.md  confluence_business_context.md  confluence_main_page.md  confluence_system_architecture.md  k8s_events.md  s.md  system_architecture.excalidraw  use_cases.md
docs/data/: README.md  data_questions.md  discovery_topology.md  teams.md
docs/evals/: llm_as_a_judge_prompting.md
docs/langgraph/: 0_langchain_drawbacks.md  4_langgraph_project.md  5_Langgraph Cheatsheet.md  5_Langsmith_cheatsheet.md  9_mcp_best_practices.md
experiments/: UI Refactor Plan.md  test_langgraph_client.py
experiments/agents/: clarify.py  prebuilt_react.py  simple_streaming_example.py  simple_streaming_example_v2.py  streaming_cli.py
memory_bank/: artifacts_design.md  conversational_streaming_architecture_v2.md  elasticsearch_connector_design.md  live_container_streaming_architecture.md  live_container_streaming_implementation.md  streaming_service_refactoring.md  streamlit_conversational_streaming_plan.md
tests/: pytest.ini  test_namespace_matching.py
(+4 files in other folders)
