[project]
name = "langgraph-agent-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
]

[tool.uv]
package = false

# [tool.uv.build-backend]
# module-root = "packages"

[tool.uv.sources]
core = { workspace = true }
ai_engine = { workspace = true }
frontend = { workspace = true }
backend = { workspace = true }


[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]

