[project]
name = "langgraph-agent-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langgraph-sdk>=0.2.4",
]

[tool.uv]
package = false

# [tool.uv.build-backend]
# module-root = "packages"

[tool.uv.sources]
core = { workspace = true }
ai_engine = { workspace = true }
frontend = { workspace = true }
# backend = { workspace = true }


[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/backend"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "langgraph-cli[inmem]>=0.4.0",
    "pytest>=8.4.2",
    "watchdog>=6.0.0",
]

